fix stretch

--- a/styles/final1styles.css
+++ b/styles/final1styles.css
@@ -32,6 +32,7 @@ html {
     border: 5px solid #800000;
     border-radius: 50%;
     z-index: 2;
+    object-fit: cover;
 
 }
 
